--- a/templates/search.html
+++ b/templates/search.html
@@ -22,7 +22,7 @@
 						<p>También podés buscar una determinada palabra y obtener qué sufijo derivativo o pseudosufijo la comforma</p>
 						<br>
 						
-						<p> Este seria el resultado {{ search }}</p>
+						<p> Este seria el resultado </p>
 					
 						<ul>
 						{% for key, value in search.items %} 
