--- a/templates/search.html
+++ b/templates/search.html
@@ -23,12 +23,23 @@
 						<br>
 						
 						<p> Este seria el resultado </p>
-					
-						<ul>
-						{% for key, value in search.items %} 
-						  <li>{{key}} - {{value}}</li>
-						{% endfor %}
-						</ul>
+
+<table>
+  <tr>
+    {% for key in search.keys %}
+        <th>{{key}}</th>
+    {% endfor %}
+  </tr>
+  <tr>
+    {% for value in search.values %}
+        <td>
+         {% for v in value %}
+           {{v}}
+	   {% endfor %}
+       </td>
+    {% endfor %}
+  </tr>
+</table>
 						
 					</div>
 				</div>
