--- a/templates/search.html
+++ b/templates/search.html
@@ -26,23 +26,9 @@
 					</div>
 				</div>
 		</div>	
-		<table>
-		  <tr>
-			{% for key in search.keys %}
-				<th>{{key}}</th>
-			{% endfor %}
-		  </tr>
-		  <tr>
-			{% for value in search.values %}
-				<td>
-				 {% for v in value %}
-				   {{v}}
-			   {% endfor %}
-			   </td>
-			{% endfor %}
-		  </tr>
-		</table>
-		
+<div align=center>
+ {{ search | safe }}
+</div>
 
 	
 	</body>
