--- a/templates/search.html
+++ b/templates/search.html
@@ -18,11 +18,9 @@
 					<div style="margin-top:5%;margin-bottom:2%;margin-left:10%;margin-right:10%;">
 						<h2 class="form-signin-heading">Diccionario de morfemas (BETA)</h2>
 						<h4>Gracias por utilizar nuestro diccionario de morfemas</h4> 
-						<p>Buscá el morfema (por ahora solo sufijos derivativos) que necesites y obtendrás su frecuencia y las palabras que lo utilizan</p>
-						<p>También podés buscar una determinada palabra y obtener qué sufijo derivativo o pseudosufijo la comforma</p>
-						<br>
 						
-						<p> Este seria el resultado </p>
+						<p> Abajo encontrarás los resultados para tu búsqueda </p>
+						<p> Esto está en desarrollo, asi que, puede fallar! </p>
 					</div>
 				</div>
 		</div>	
