--- a/templates/morfemas.html
+++ b/templates/morfemas.html
@@ -22,7 +22,7 @@
 					
 						<form class="form-signin" method="get" action='search/'>
 							<div style="margin-bottom:1%">
-								<input class="form-control" name="Sufijo" placeholder="Sufijo"> 
+								<input class="form-control" name="sufijo" placeholder="Sufijo"> 
 								<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 							</div>
 						</form>
