agrego boton en la busqueda de palabras para buscar por sufijo

--- a/templates/search.html
+++ b/templates/search.html
@@ -31,7 +31,7 @@
 
 {%if por_palabra%} 
 	<div>
-		<form class="form-signin" method="get" action={% URL %}>
+		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 			</div>
