--- a/templates/search.html
+++ b/templates/search.html
@@ -33,6 +33,7 @@
 	<div>
 		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
+				<input name="sufijo" value={{sufjo}} type="hidden">
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 			</div>
 		</form>
