--- a/templates/search.html
+++ b/templates/search.html
@@ -26,14 +26,14 @@
 		</div>	
 
 <div align=center>
- {{ search | safe }}
+	{{ search | safe }}
 </div>
 
 {%if por_palabra%} 
 	<div>
 		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
-				<input name="sufijo" value={{sufjo}} type="hidden">
+				<input name="sufijo" value="{{sufjo}}" type="hidden">
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 			</div>
 		</form>
