agrego boton en la busqueda de palabras para buscar por sufijo

--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,6 @@
 				var sufijo  = {{sufijo}});
 				document.getElementById("sufijo").value = sufijo;
 			}
-
 		</script>
 		
 	</head>
@@ -40,7 +39,7 @@
 	<div>
 		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
-				<input name="sufijo" type="hidden">
+				<input name="sufijo" type="hidden" value=¨¨>
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 			</div>
 		</form>
