--- a/templates/search.html
+++ b/templates/search.html
@@ -11,8 +11,8 @@
 
 		<script>
 			function variables() {
-				var sufijo  = {{sufijo}});
-				document.getElementById("sufijo").value = sufijo;
+				var sufijo  = "{{sufijo}}";
+				document.getElementById('sufijo').value = sufijo;
 			}
 		</script>
 		
@@ -32,15 +32,14 @@
 		</div>	
 
 <div align=center>
-	{{sufijo}}
 	{{ search | safe }}
 </div>
 
 {%if por_palabra%} 
 	<div>
-		<form class="form-signin" method="get" action='search/'>
+		<form class="form-signin" method="get" action='/search/'>
 			<div style="margin-bottom:1%">
-				<input name="sufijo" type="hidden" value=¨¨>
+				<input id=sufijo name="sufijo" value="" type="hidden">
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 			</div>
 		</form>
