--- a/templates/search.html
+++ b/templates/search.html
@@ -45,6 +45,15 @@
 			</div>
 		</form>
 	</div>
+{%else%}
+	<div>
+		<form class="form-signin" method="get" action='search/'>
+			<div style="margin-bottom:1%">
+				<input name="sufijo" type="hidden" value=¨¨>
+				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
+			</div>
+		</form>
+	</div>
 {%endif%}
 
 	
