voy con un boton en la busqueda de morfemas que busque todas las palabras con ese morfema

--- a/templates/search.html
+++ b/templates/search.html
@@ -49,7 +49,7 @@
 	<div>
 		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
-				<input id=palsPorSuj name="palsPorSuj" type="hidden" value=¨¨>
+				<input id=palsPorSuj name="palsPorSuj" value="" type="hidden" >
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar palabras con este sufijo">
 			</div>
 		</form>
