--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,6 @@
 			function variables() {
 				var sufijo  = "{{sufijo}}";
 				document.getElementById('sufijo').value = sufijo;
-				document.getElementById('palsPorSuj').value = sufijo;
 			}
 		</script>
 		
@@ -49,7 +48,7 @@
 	<div>
 		<form class="form-signin" method="get" action='search/'>
 			<div style="margin-bottom:1%">
-				<input id=palsPorSuj name="palsPorSuj" value="" type="hidden" >
+				<input id=sufijo name="palsPorSuj" value="" type="hidden" >
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar palabras con este sufijo">
 			</div>
 		</form>
