--- a/templates/search.html
+++ b/templates/search.html
@@ -46,7 +46,7 @@
 	</div>
 {%else%}
 	<div>
-		<form class="form-signin" method="get" action='search/'>
+		<form class="form-signin" method="get" action='/search/'>
 			<div style="margin-bottom:1%">
 				<input id=sufijo name="palsPorSuj" value="" type="hidden" >
 				<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar palabras con este sufijo">
