--- a/templates/search.html
+++ b/templates/search.html
@@ -36,7 +36,7 @@
 </div>
 
 {%if por_palabra%} 
-	<div style="align:center width:50%">
+	<div>
 		<form class="form-signin" method="get" action='/search/'>
 			<div style="margin-bottom:1%">
 				<input id=sufijo name="sufijo" value="" type="hidden">
@@ -45,7 +45,7 @@
 		</form>
 	</div>
 {%else%}
-	<div style="align:center width:50%">
+	<div>
 		<form class="form-signin" method="get" action='/search/'>
 			<div style="margin-bottom:1%">
 				<input id=sufijo name="palsPorSuj" value="" type="hidden" >
