--- a/templates/search.html
+++ b/templates/search.html
@@ -49,7 +49,7 @@
 		<form class="form-signin" method="get" action='/search/'>
 			<div style="margin-bottom:1%">
 				<input id=sufijo name="palsPorSuj" value="" type="hidden" >
-				<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar palabras con este sufijo" style="margin-left:25%; width:50%">
+				<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar todas las palabras con este sufijo" style="margin-left:25%; width:50%">
 			</div>
 		</form>
 	</div>
