--- a/templates/search.html
+++ b/templates/search.html
@@ -35,6 +35,14 @@
 	{{ search | safe }}
 </div>
 
+{%if warning%} 
+<div id="warning" align="center" style="margin-top:5%">
+	<div align="center" style="width:50%; background-color:#961e1e; border-color:#961e1e; height:90%" class="btn btn-lg btn-primary btn-block" >
+	Aviso: este morfema tiene alomorfos. Hacé click acá para más información 
+	</div>
+</div>
+{%endif%}
+
 {%if por_palabra%} 
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
