--- a/templates/search.html
+++ b/templates/search.html
@@ -31,18 +31,18 @@
 				</div>
 		</div>	
 
-<div align=center>
-	{{ search | safe }}
-</div>
 
 {%if warning%} 
 <div id="warning" align="center" style="margin-top:5%">
-	<div align="center" style="width:50%; background-color:#961e1e; border-color:#961e1e; height:90%" class="btn btn-lg btn-primary btn-block" >
-		<p>Aviso: este morfema tiene alomorfos.</p> 
-		<p>Hacé click acá para más información </p>
+	<div align="center" style="width:75%; background-color:#961e1e; border-color:#961e1e; height:90%" class="btn btn-lg btn-primary btn-block" >
+		Aviso: este morfema tiene alomorfos. Hacé click acá para más información
 	</div>
 </div>
 {%endif%}
+
+<div align=center>
+	{{ search | safe }}
+</div>
 
 {%if por_palabra%} 
 	<div>
