--- a/templates/morfemas.html
+++ b/templates/morfemas.html
@@ -23,7 +23,7 @@
 						<form class="form-signin" method="get" action='search/'>
 							<div style="margin-bottom:1%">
 								<input class="form-control" name="sufijo" placeholder="Sufijo"> 
-								<input class="form-control" name="bajar" value="False"  hidden> 
+								<input class="form-control" name="bajar" value="False"  type="hidden"> 
 								<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por sufijo">
 							</div>
 						</form>
@@ -31,7 +31,7 @@
 						<form class="form-signin" method="get" action='search/'>
 							<div style="margin-bottom:1%">
 								<input class="form-control" name="palabra" placeholder="Palabra">
-								<input class="form-control" name="bajar" value="False"  hidden> 
+								<input class="form-control" name="bajar" value="False"  type="hidden"> 
 								<input class="btn btn-lg btn-loggin btn-block" style ="margin-bottom:20px" type="submit" value="Buscar por palabra">
 							</div>
 						</form>	
