--- a/templates/search.html
+++ b/templates/search.html
@@ -57,7 +57,7 @@
 {%else%}
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
-			<div style="margin-bottom:1%">
+			<div>
 				<input id=sufijo class="form-control" name="sufijo" type="hidden"> 
 				<input class="form-control" name="bajar" value="True"  type="hidden"> 
 				<input class="btn btn-lg btn-primary btn-block" type="submit" value="Descargar tabla" style="margin-left:25%; width:50%">
