--- a/templates/search.html
+++ b/templates/search.html
@@ -13,6 +13,8 @@
 			function variables() {
 				var sufijo  = "{{sufijo}}";
 				document.getElementById('sufijo').value = sufijo;
+				var palabra  = "{{palabra}}";
+				document.getElementById('palabra').value = palabra;
 			}
 		</script>
 		
@@ -47,10 +49,13 @@
 {%if por_palabra%} 
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
-			<div style="margin-bottom:1%">
-				<input id=sufijo name="sufijo" value="" type="hidden">
-				<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar este sufijo" style="margin-left:25%; width:50%">
-			</div>
+			<input id=palabra class="form-control" name="palabra" type="hidden"> 
+			<input class="form-control" name="bajar" value="True"  type="hidden"> 
+			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Descargar tabla" style="margin-left:25%; width:50%">
+		</form>
+		<form class="form-signin" method="get" action='/search/'>
+			<input id=sufijo name="sufijo" value="" type="hidden">
+			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar este sufijo" style="margin-left:25%; width:50%">		
 		</form>
 	</div>
 {%else%}
