--- a/templates/search.html
+++ b/templates/search.html
@@ -56,6 +56,7 @@
 		</form>
 		<form class="form-signin" method="get" action='/search/'>
 			<input id=sufijo name="sufijo" value="" type="hidden">
+			<input class="form-control" name="bajar" value="False"  type="hidden"> 
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar este sufijo" style="margin-left:25%; width:50%">		
 		</form>
 	</div>
