--- a/templates/search.html
+++ b/templates/search.html
@@ -69,6 +69,7 @@
 		</form>
 		<form class="form-signin" method="get" action='/search/'>
 			<input id=sufijo2 name="palsPorSuj" value="" type="hidden" >
+			<input class="form-control" name="bajar" value="False"  type="hidden"> 
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar todas las palabras con este sufijo" style="margin-left:25%; width:50%">
 		</form>
 	</div>
