--- a/templates/search.html
+++ b/templates/search.html
@@ -50,7 +50,7 @@
 {%if por_palabra%} 
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
-			<input id=palabra class="form-control" name="palabra" type="hidden"> 
+			<input id=palabra class="form-control" name="palabra" value="" type="hidden"> 
 			<input class="form-control" name="bajar" value="True"  type="hidden"> 
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Descargar tabla" style="margin-left:25%; width:50%">
 		</form>
