--- a/templates/search.html
+++ b/templates/search.html
@@ -78,8 +78,8 @@
 {%elif search_type == "palsPorSuf"%} 
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
-			<input name="sufijo" value =""     type="hidden" id=bajar> 
-			<input name="bajar"  value="True"  type="hidden"> 
+			<input name="palsPorSuf" value =""     type="hidden" id=bajar> 
+			<input name="bajar"      value="True"  type="hidden"> 
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Descargar tabla" style="margin-left:25%; width:50%">
 		</form>
 		<form class="form-signin" method="get" action='/search/'>
