--- a/templates/search.html
+++ b/templates/search.html
@@ -83,9 +83,9 @@
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Descargar tabla" style="margin-left:25%; width:50%">
 		</form>
 		<form class="form-signin" method="get" action='/search/'>
-			<input name="palsPorSuf" value=""       type="hidden" id=newSearch>
-			<input name="bajar"      value="False"  type="hidden"> 
-			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar todas las palabras con este sufijo" style="margin-left:25%; width:50%">
+			<input name="sufijo" value=""       type="hidden" id=newSearch>
+			<input name="bajar"  value="False"  type="hidden"> 
+			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Ver sufijo" style="margin-left:25%; width:50%">
 		</form>
 	</div>
 {%endif%}
