--- a/templates/search.html
+++ b/templates/search.html
@@ -61,6 +61,9 @@
 			<input name="bajar"  value="False" type="hidden"> 
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar este sufijo" style="margin-left:25%; width:50%">		
 		</form>
+		<form class="form-signin" method="get" action='/'>
+			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Volver al buscador" style="margin-left:25%; width:50%">		
+		</form>
 	</div>
 {%elif search_type == "sufijo"%} 
 	<div>
