--- a/templates/search.html
+++ b/templates/search.html
@@ -99,6 +99,14 @@
 	</div>
 {%endif%}
 
+<ul>
+  <li><b>Frecuencia de palabra:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras.</li>
+  <li><b>Frecuencia Token Afijadas:</b> Suma de la frecuencia de todos los ítems que contienen ese afijo.</li>
+  <li><b>Frecuencia Token Pseudoafijadas:</b> Suma de la frecuencia de todos los ítems que contienen esta terminación sin tratarse de un afijo.</li>
+  <li><b>Proporción Token:</b> Frecuencia Token Afijadas / (Frecuencia Token Afijadas + Frecuencia Token Pseudoafijadas)</li>
+  <li><b>Frecuencia Type Pseudoafijadas:</b> Cantidad de ítems que contienen esta terminación sin tratarse de un afijo.</li>
+  <li><b>Proporción Type:</b> Frecuencia Type Afijadas / (Frecuencia Type Afijadas + Frecuencia Type Pseudoafijadas)</li>
+</ul>
 
 
 
