--- a/templates/search.html
+++ b/templates/search.html
@@ -38,16 +38,16 @@
 {%if warning%} 
 <div id="warning" align="center" style="margin-top:1%; margin-bottom:1%">
 	<div align="center" style="width:75%; background-color:#961e1e; border-color:#961e1e; height:90%" class="btn btn-lg btn-primary btn-block" >
-		No se han encontrado resultados. Por favor, verifique que el ítem esté correctamente escrito.
+		Aviso: este morfema tiene alomorfos. Hacé click acá para más información
 	</div>
 </div>
 {%endif%}
 
 <!-- Warning en caso de busqueda vacia  -->
-{%if warning%} 
+{%if empty%} 
 <div id="warning" align="center" style="margin-top:1%; margin-bottom:1%">
 	<div align="center" style="width:75%; background-color:#961e1e; border-color:#961e1e; height:90%" class="btn btn-lg btn-primary btn-block" >
-		Aviso: este morfema tiene alomorfos. Hacé click acá para más información
+		No se han encontrado resultados. Por favor, verifique que el ítem esté correctamente escrito.
 	</div>
 </div>
 {%endif%}
