divido el glosario segundo tipo de busqueda

--- a/templates/search.html
+++ b/templates/search.html
@@ -100,6 +100,7 @@
 		  <li><b>Frecuencia Token Afijadas:</b> Suma de la frecuencia de todos los ítems que contienen ese afijo</li>
 		  <li><b>Frecuencia Token Pseudoafijadas:</b> Suma de la frecuencia de todos los ítems que contienen esta terminación sin tratarse de un afijo</li>
 		  <li><b>Proporción Token:</b> Frecuencia Token Afijadas / (Frecuencia Token Afijadas + Frecuencia Token Pseudoafijadas)</li>
+		  <li><b>Frecuencia Type Afijadas:</b> Cantidad de ítems que contienen este afijo</li>
 		  <li><b>Frecuencia Type Pseudoafijadas:</b> Cantidad de ítems que contienen esta terminación sin tratarse de un afijo</li>
 		  <li><b>Proporción Type:</b> Frecuencia Type Afijadas / (Frecuencia Type Afijadas + Frecuencia Type Pseudoafijadas)</li>
 		</ul>
