reordeno y renombro las columnas de la busqeuda por pal

--- a/templates/search.html
+++ b/templates/search.html
@@ -76,7 +76,7 @@
 	</div>
 	<div style="margin-left:25%; width:50%">
 		<ul>
-		  <li><b>Frecuencia de palabra:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
+		  <li><b>Frecuencia léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
 		</ul>
 	</div>
 {%elif search_type == "sufijo"%} 
