agrego glosario en busqueda por pal

--- a/templates/search.html
+++ b/templates/search.html
@@ -77,6 +77,8 @@
 	<div style="margin-left:25%; width:50%">
 		<ul>
 		  <li><b>Frecuencia léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
+		  <li><b>Terminación:</b> terminacion de la palabras </li>
+		  <li><b>Sufijo:</b> Es la terminación un sufijo? </li>
 		</ul>
 	</div>
 {%elif search_type == "sufijo"%} 
@@ -120,6 +122,13 @@
 		<form class="form-signin" method="get" action='/'>
 			<input class="btn btn-lg btn-primary btn-block" type="submit" value="Volver al buscador" style="margin-left:25%; width:50%">		
 		</form>
+	</div>
+	<div style="margin-left:25%; width:50%">
+		<ul>
+		  <li><b>Frecuencia léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
+		  <li><b>Terminación:</b> terminacion de la palabras </li>
+		  <li><b>Sufijo:</b> Es la terminación un sufijo? </li>
+		</ul>
 	</div>
 {%endif%}
 
