--- a/templates/search.html
+++ b/templates/search.html
@@ -125,9 +125,9 @@
 	</div>
 	<div style="margin-left:25%; width:50%">
 		<ul>
-		  <li><b>Frecuencia léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
-		  <li><b>Terminación:</b> terminacion de la palabras </li>
-		  <li><b>Sufijo:</b> Es la terminación un sufijo? </li>
+		  <li><b>Frecuencia Léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
+		  <li><b>Terminación:</b> Terminacion de la palabras </li>
+		  <li><b>Sufijo:</b> ¿Es la terminación un sufijo? </li>
 		</ul>
 	</div>
 {%endif%}
