--- a/templates/search.html
+++ b/templates/search.html
@@ -76,8 +76,8 @@
 	</div>
 	<div style="margin-left:25%; width:50%">
 		<ul>
-		  <li><b>Frecuencia Léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras</li>
-		  <li><b>Terminación:</b> terminacion de la palabras </li>
+		  <li><b>Frecuencia Léxica:</b> Frecuencia de aparición del ítem en el corpus LEXESP por cada millón de palabras. </li>
+		  <li><b>Terminación:</b> terminacion de la palabra. </li>
 		  <li><b>Sufijo:</b> ¿Es la terminación un sufijo? </li>
 		</ul>
 	</div>
