edito todo para cargar en la DB el numero de familia

--- a/templates/search.html
+++ b/templates/search.html
@@ -43,7 +43,7 @@
 </div>
 
 <form class="form-signin" method="get" action='/search/'>
-	<input name="familia" value="{{ familia }}"      type="hidden" id=newSearch >
+	<input name="familia" value="{{ familia }}"  type="hidden">
 	<input name="bajar"  value="False" type="hidden"> 
 	<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar esta familia de alomorfos" style="margin-left:25%; width:50%">		
 </form>
