edito todo para cargar en la DB el numero de familia

--- a/templates/search.html
+++ b/templates/search.html
@@ -45,7 +45,7 @@
 <form class="form-signin" method="get" action='/search/'>
 	<input name="familia" value="{{ familia }}"  type="hidden">
 	<input name="bajar"  value="False" type="hidden"> 
-	<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar esta familia de alomorfos {{ familia }}" style="margin-left:25%; width:50%">		
+	<input class="btn btn-lg btn-primary btn-block" type="submit" value="Buscar esta familia de alomorfos" style="margin-left:25%; width:50%">		
 </form>
 {%endif%}
 
