edito todo para cargar en la DB el numero de familia

--- a/templates/search.html
+++ b/templates/search.html
@@ -87,7 +87,7 @@
 		  <li><b>Sufijo:</b> ¿Es la terminación un sufijo? </li>
 		</ul>
 	</div>
-{%if search_type == "familia"%} 
+{%elif search_type == "familia"%} 
 	<div>
 		<form class="form-signin" method="get" action='/search/'>
 			<input name="palabra" value=""     type="hidden" id=bajar > 
